implements user register and roles for authorites